@@ -1,5 +1,10 @@
 2014-06-18  Tom Tromey  <tromey@redhat.com>
 
+	* target.c: Include target/symbol.h.
+	(target_look_up_symbol): New function.
+
+2014-06-18  Tom Tromey  <tromey@redhat.com>
+
 	* target.c (target_wait, target_stop, target_resume): New
 	functions.
 
