@@ -1,5 +1,13 @@
 2014-06-18  Tom Tromey  <tromey@redhat.com>
 
+	* target/symbol.h: New file.
+	* target.h: Include target/symbol.h.
+	* target.c (target_look_up_symbol): New function.
+	* common/agent.c: Include target/symbol.h.
+	(agent_look_up_symbols): Use target_look_up_symbol.
+
+2014-06-18  Tom Tromey  <tromey@redhat.com>
+
 	* target/target.h (target_resume, target_wait, target_stop)
 	(non_stop): Moved from target.h.
 	* target.h (target_resume, target_wait, target_stop, non_stop):
